--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "standard",
+    "lint:fix": "standard --fix"
   },
   "author": "Juan Itto",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "puppeteer": "^3.0.4"
   },
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "nodemon": "^2.0.3",
+    "standard": "^16.0.3"
+  },
+  "standard": {
+    "ignore": [
+      "public"
+    ]
   }
 }
