--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Juan Itto",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "puppeteer": "^3.0.4"
   },
